--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 04:04:00 PM</p>
+    <p class="lastupdate">09/19/2020 04:09:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.3&#176;F</td>
+        <td class="data">87.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.3&#176;F</td>
+        <td class="data">87.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.3&#176;F</td>
+        <td class="data">87.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.8&#176;F</td>
+        <td class="data">53.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">32%</td>
+        <td class="data">31%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.837 inHg (-0.068)</td>
+        <td class="data">29.837 inHg (-0.066)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph N (0&#176;)</td>
+        <td class="data">3 mph NNW (338&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.7&#176;F</td>
+        <td class="data">78.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:02:37 PM">
-            87.3</span><br/>
+          <span title="04:08:55 PM">
+            87.4</span><br/>
           <span title="05:54:36 AM">
             51.4</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="04:02:37 PM" class="hival">
-            87.3</span>
+          <span title="04:08:55 PM" class="hival">
+            87.4</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="05:16:28 AM">
             90</span><br/>
-          <span title="03:21:55 PM">
-            32</span>
+          <span title="04:04:37 PM">
+            31</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:35:01 AM">
             29.972</span><br/>
-          <span title="03:50:02 PM">
-            29.836</span>
+          <span title="04:07:01 PM">
+            29.834</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           2<br/>
-          355
+          354
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:02:01 PM">
-            78.7</span><br/>
+          <span title="04:06:01 PM">
+            78.9</span><br/>
           <span title="06:12:00 AM">
             71.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 1 hour, 17 minutes</td>
+      <td class="data">18 days, 1 hour, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 1 hour, 17 minutes</td>
+      <td class="data">18 days, 1 hour, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
