--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 04:09:00 PM</p>
+    <p class="lastupdate">09/19/2020 04:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.837 inHg (-0.066)</td>
+        <td class="data">29.830 inHg (-0.070)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph NNW (338&#176;)</td>
+        <td class="data">5 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,11 +86,11 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.9&#176;F</td>
+        <td class="data">79.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">44%</td>
+        <td class="data">43%</td>
       </tr>
     </tbody>
   </table>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:08:55 PM">
-            87.4</span><br/>
+          <span title="04:10:39 PM">
+            87.7</span><br/>
           <span title="05:54:36 AM">
             51.4</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="04:08:55 PM" class="hival">
-            87.4</span>
+          <span title="04:10:39 PM" class="hival">
+            87.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="08:35:01 AM">
             29.972</span><br/>
-          <span title="04:07:01 PM">
-            29.834</span>
+          <span title="04:13:01 PM">
+            29.830</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
             30.054</span><br/>
-          <span title="02:56:02 PM (Sunday)">
-            29.833</span>
+          <span title="04:13:01 PM (Saturday)">
+            29.830</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -448,7 +448,7 @@
         </td>
         <td class="data new_row hilo_month">
           0<br/>
-          227
+          228
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:06:01 PM">
-            78.9</span><br/>
+          <span title="04:13:01 PM">
+            79.3</span><br/>
           <span title="06:12:00 AM">
             71.5</span>
         </td>
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="09:28:01 AM">
             53</span><br/>
-          <span title="03:36:01 PM">
-            44</span>
+          <span title="04:12:01 PM">
+            43</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:28:01 AM (Saturday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 1 hour, 22 minutes</td>
+      <td class="data">18 days, 1 hour, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 1 hour, 22 minutes</td>
+      <td class="data">18 days, 1 hour, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
