--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 04:24:00 PM</p>
+    <p class="lastupdate">09/19/2020 04:29:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.7&#176;F</td>
+        <td class="data">87.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.7&#176;F</td>
+        <td class="data">87.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.7&#176;F</td>
+        <td class="data">87.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.3&#176;F</td>
+        <td class="data">53.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.824 inHg (-0.073)</td>
+        <td class="data">29.821 inHg (-0.074)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">3 mph W (270&#176;)</td>
+        <td class="data">2 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.7&#176;F</td>
+        <td class="data">79.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="08:35:01 AM">
             29.972</span><br/>
-          <span title="04:22:01 PM">
-            29.823</span>
+          <span title="04:28:01 PM">
+            29.821</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
             30.054</span><br/>
-          <span title="04:22:01 PM (Saturday)">
-            29.823</span>
+          <span title="04:28:01 PM (Saturday)">
+            29.821</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:23:01 PM">
-            79.7</span><br/>
+          <span title="04:27:01 PM">
+            79.9</span><br/>
           <span title="06:12:00 AM">
             71.5</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">90%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 1 hour, 37 minutes</td>
+      <td class="data">18 days, 1 hour, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 1 hour, 37 minutes</td>
+      <td class="data">18 days, 1 hour, 42 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
