--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 04:39:00 PM</p>
+    <p class="lastupdate">09/19/2020 04:44:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">87.9&#176;F</td>
+        <td class="data">88.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">87.9&#176;F</td>
+        <td class="data">88.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">87.9&#176;F</td>
+        <td class="data">88.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">53.4&#176;F</td>
+        <td class="data">52.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">31%</td>
+        <td class="data">30%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.818 inHg (-0.073)</td>
+        <td class="data">29.818 inHg (-0.072)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph ENE (68&#176;)</td>
+        <td class="data">2 mph WSW (248&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.3&#176;F</td>
+        <td class="data">80.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:37:47 PM">
-            87.9</span><br/>
+          <span title="04:42:35 PM">
+            88.2</span><br/>
           <span title="05:54:36 AM">
             51.4</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="04:37:47 PM" class="hival">
-            87.9</span>
+          <span title="04:42:35 PM" class="hival">
+            88.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="05:16:28 AM">
             90</span><br/>
-          <span title="04:04:37 PM">
-            31</span>
+          <span title="04:43:03 PM">
+            30</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="08:35:01 AM">
             29.972</span><br/>
-          <span title="04:38:01 PM">
-            29.818</span>
+          <span title="04:41:01 PM">
+            29.815</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
             30.054</span><br/>
-          <span title="04:38:01 PM (Saturday)">
-            29.818</span>
+          <span title="04:41:01 PM (Saturday)">
+            29.815</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:36:01 PM">
-            80.3</span><br/>
+          <span title="04:40:01 PM">
+            80.4</span><br/>
           <span title="06:12:00 AM">
             71.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 1 hour, 52 minutes</td>
+      <td class="data">18 days, 1 hour, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 1 hour, 52 minutes</td>
+      <td class="data">18 days, 1 hour, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
