--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/19/2020 04:44:00 PM</p>
+    <p class="lastupdate">09/19/2020 04:49:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">88.2&#176;F</td>
+        <td class="data">88.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">88.2&#176;F</td>
+        <td class="data">88.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">88.2&#176;F</td>
+        <td class="data">88.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">52.8&#176;F</td>
+        <td class="data">53.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.818 inHg (-0.072)</td>
+        <td class="data">29.814 inHg (-0.073)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph WSW (248&#176;)</td>
+        <td class="data">1 mph SSW (202&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.4&#176;F</td>
+        <td class="data">80.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:42:35 PM">
-            88.2</span><br/>
+          <span title="04:48:13 PM">
+            88.6</span><br/>
           <span title="05:54:36 AM">
             51.4</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="04:42:35 PM" class="hival">
-            88.2</span>
+          <span title="04:48:13 PM" class="hival">
+            88.6</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)" class="hival">
@@ -305,14 +305,14 @@
         <td class="data new_row hilo_day">
           <span title="08:35:01 AM">
             29.972</span><br/>
-          <span title="04:41:01 PM">
-            29.815</span>
+          <span title="04:47:01 PM">
+            29.814</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="10:03:01 AM (Tuesday)">
             30.054</span><br/>
-          <span title="04:41:01 PM (Saturday)">
-            29.815</span>
+          <span title="04:47:01 PM (Saturday)">
+            29.814</span>
         </td>
         <td class="data new_row hilo_month">
           <span title="09/02/2020 09:40:02 AM">
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="04:40:01 PM">
-            80.4</span><br/>
+          <span title="04:46:01 PM">
+            80.5</span><br/>
           <span title="06:12:00 AM">
             71.5</span>
         </td>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">18 days, 1 hour, 57 minutes</td>
+      <td class="data">18 days, 2 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">18 days, 1 hour, 57 minutes</td>
+      <td class="data">18 days, 2 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
